chapter2/nginx-pod.yaml
#------------------------------------------------------------------------------
# chapter2/nginx-pod.yaml
# k8s에 nginx를 레플리카셋으로 배포
#------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
