chapter2/book-mesh.yaml
#------------------------------------------------------------------------------
# chapter2/book-mesh.yaml
# k8s 이스티오에 서비스 메시로 도서 앱을 배포  
# 도커 이미지 경로를 실습환경에 맞춘 후 진행
#------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-mesh-deployment
spec:
  selector:
    matchLabels:
      app: book-mesh
      version: v1.0
  replicas: 3
  template:
    metadata:
      labels:
        app: book-mesh
        version: v1.0
    spec:
      containers:
      - name: book-mesh
        #-----------------------------------------------------------------------
        # 도커 이미지 경로(실습환경에 맞춰 변경할 것)
        #-----------------------------------------------------------------------
        image: <region-key>.ocir.io/<tenancy-namespace>/oci-demo-repo/sample-book-rest:latest
        imagePullPolicy: Always
        ports:
        - name: book-mesh
          containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      imagePullSecrets:
        - name: ocirsecret
---
apiVersion: v1
kind: Service
metadata:
  name: book-mesh-service
  labels:
    app: book-mesh
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: book-mesh
