chapter2/book.yaml
#------------------------------------------------------------------------------
# chapter2/book.yaml
# k8s에 도서 앱을 배포  
# 도커 이미지 경로를 실습환경에 맞춘 후 진행
#------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-rest-deployment
spec:
  selector:
    matchLabels:
      app: book-rest
      version: v1.0
  replicas: 3
  template:
    metadata:
      labels:
        app: book-rest
        version: v1.0
    spec:
      containers:
      - name: book-rest
        #-----------------------------------------------------------------------
        # 도커 이미지 경로(실습환경에 맞춰 변경할 것)
        #-----------------------------------------------------------------------
        image: yny.ocir.io/ociexplained/oci-demo-repo/sample-book-rest:latest
        imagePullPolicy: Always
        ports:
        - name: book-rest
          containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      imagePullSecrets:
        - name: ocirsecret
---
apiVersion: v1
kind: Service
metadata:
  name: book-rest-lb
  labels:
    app: book-rest
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
spec:
  type: LoadBalancer
  ports:
  - port: 5000
  selector:
    app: book-rest
