chapter2/user-mesh-v1.1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mesh-deployment-v1.1
spec:
  selector:
    matchLabels:
      app: user-mesh
      version: v1.1
  replicas: 3
  template:
    metadata:
      labels:
        app: user-mesh
        version: v1.1
    spec:
      containers:
      - name: user-mesh
        image: kix.ocir.io/apackrsct01/oci-demo-registry/sample-user-rest:latest
        imagePullPolicy: Always
        ports:
        - name: user-mesh
          containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      imagePullSecrets:
        - name: ocirsecret
---
apiVersion: v1
kind: Service
metadata:
  name: user-mesh-service
  labels:
    app: user-mesh
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: user-mesh
