chapter2/user-mesh.yaml
#------------------------------------------------------------------------------
# chapter2/user-mesh.yaml
# k8s 이스티오에 서비스 메시로 사용자 앱을 배포  
# 도커 이미지 경로를 실습환경에 맞춘 후 진행
#------------------------------------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mesh-deployment
spec:
  selector:
    matchLabels:
      app: user-mesh
      version: v1
  replicas: 3
  template:
    metadata:
      labels:
        app: user-mesh
        version: v1
    spec:
      containers:
      - name: user-mesh
        #-----------------------------------------------------------------------
        # 도커 이미지 경로(실습환경에 맞춰 변경할 것)
        #-----------------------------------------------------------------------
        image: yny.ocir.io/ociexplained/oci-demo-repo/sample-user-rest:latest
        imagePullPolicy: Always
        ports:
        - name: user-mesh
          containerPort: 5000
          protocol: TCP
      imagePullSecrets:
        - name: ocirsecret
---
apiVersion: v1
kind: Service
metadata:
  name: user-mesh-service
  labels:
    app: user-mesh
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: user-mesh
    version: v1
