chapter2/demo-gateway.yaml
#------------------------------------------------------------------------------
# chapter2/demo-gateway.yaml
# k8s 이스티오 인그레스 게이트웨이를 생성  
#------------------------------------------------------------------------------

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
