chapter2/demo-destinationrule.yaml
#------------------------------------------------------------------------------
# chapter2/demo-destinationrule.yaml
# 유저메시의 v1.1, v1.2 서비스의 라우팅을 위한 서브셋 구성
#------------------------------------------------------------------------------

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-destinationrule
spec:
  host: user-mesh-service
  subsets:
  - name: existing
    labels:
      version: v1.1
  - name: updated
    labels:
      version: v1.2
