chapter2/virtualservices.yaml
#------------------------------------------------------------------------------
# chapter2/virtualservices.yaml
# k8s에 배포한서비스를 이스티오 인그레스 게이트웨이와 연결하는 virtual service 생성
# 유저서비스 v1과 도서 서비스 v1이 연계됨
# prefix /v1/user, /v1/book을 두어 API URI를 구성
#------------------------------------------------------------------------------

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - demo-gateway
  http:
  - match:
    - uri:
        prefix: /v1/user
    route:
    - destination:
        host: user-mesh-service
        port:
          number: 5000
  - match:
    - uri:
        prefix: /v1/book
    route:
    - destination:
        host: book-mesh-service
        port:
          number: 5000
